fix header: add z-index

--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -1,6 +1,7 @@
 .header {
   position: sticky;
   top: 0;
+  z-index: 99;
   background-color: $primary-color;
 
   .container {
